clean up device gateway